--- a/share/gui/smyrna.glade
+++ b/share/gui/smyrna.glade
@@ -122,15 +122,6 @@
 			  <signal name="activate" handler="mAttributesSlot" last_modification_time="Fri, 06 Nov 2009 17:03:12 GMT"/>
 			</widget>
 		      </child>
-
-		      <child>
-			<widget class="GtkMenuItem" id="node_list1">
-			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">Node List</property>
-			  <property name="use_underline">True</property>
-			  <signal name="activate" handler="mNodeListSlot" last_modification_time="Fri, 06 Nov 2009 17:02:05 GMT"/>
-			</widget>
-		      </child>
 		    </widget>
 		  </child>
 		</widget>
@@ -155,18 +146,9 @@
 		      </child>
 
 		      <child>
-			<widget class="GtkMenuItem" id="hide_console1">
-			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">Hide Console</property>
-			  <property name="use_underline">True</property>
-			  <signal name="activate" handler="mHideConsoleSlot" last_modification_time="Wed, 22 Jul 2009 16:17:32 GMT"/>
-			</widget>
-		      </child>
-
-		      <child>
 			<widget class="GtkMenuItem" id="view_selected_nodes1">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">View Selected Nodes</property>
+			  <property name="label" translatable="yes">Selected Nodes</property>
 			  <property name="use_underline">True</property>
 			  <signal name="activate" handler="mNodeListSlot" last_modification_time="Tue, 09 Mar 2010 18:05:05 GMT"/>
 			</widget>
@@ -819,7 +801,7 @@
 	      <property name="width">400</property>
 	      <property name="height">400</property>
 	      <property name="hadjustment">0 0 658 0 592.2 658</property>
-	      <property name="vadjustment">0 0 425 0 382.5 425</property>
+	      <property name="vadjustment">0 0 421 0 378.9 421</property>
 
 	      <child>
 		<widget class="GtkTable" id="table4">
@@ -1603,7 +1585,7 @@ When head or tail is within viewport
 	      <property name="width">400</property>
 	      <property name="height">400</property>
 	      <property name="hadjustment">0 0 658 0 592.2 658</property>
-	      <property name="vadjustment">0 0 425 0 382.5 425</property>
+	      <property name="vadjustment">0 0 421 0 378.9 421</property>
 
 	      <child>
 		<widget class="GtkTable" id="table16">
@@ -2061,7 +2043,7 @@ GLUT_BITMAP_HELVETICA_18
 	      <property name="width">400</property>
 	      <property name="height">400</property>
 	      <property name="hadjustment">0 0 658 0 592.2 658</property>
-	      <property name="vadjustment">0 0 425 0 382.5 425</property>
+	      <property name="vadjustment">0 0 421 0 378.9 421</property>
 
 	      <child>
 		<widget class="GtkTable" id="table5">
@@ -2394,7 +2376,7 @@ Custom</property>
 	      <property name="width">400</property>
 	      <property name="height">400</property>
 	      <property name="hadjustment">0 0 658 0 592.2 658</property>
-	      <property name="vadjustment">0 0 425 0 382.5 425</property>
+	      <property name="vadjustment">0 0 421 0 378.9 421</property>
 
 	      <child>
 		<widget class="GtkTable" id="table6">
@@ -2786,7 +2768,7 @@ Custom</property>
 	      <property name="width">400</property>
 	      <property name="height">400</property>
 	      <property name="hadjustment">0 0 658 0 592.2 658</property>
-	      <property name="vadjustment">0 0 425 0 382.5 425</property>
+	      <property name="vadjustment">0 0 421 0 378.9 421</property>
 
 	      <child>
 		<widget class="GtkVBox" id="vbox6">
@@ -3793,7 +3775,7 @@ Custom</property>
 		      <property name="width_request">562</property>
 		      <property name="height_request">68</property>
 		      <property name="visible">True</property>
-		      <property name="n_rows">3</property>
+		      <property name="n_rows">4</property>
 		      <property name="n_columns">6</property>
 		      <property name="homogeneous">False</property>
 		      <property name="row_spacing">0</property>
@@ -4065,6 +4047,26 @@ Custom</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <property name="focus_on_click">True</property>
 			  <signal name="clicked" handler="on_attrSearchBtn_clicked" last_modification_time="Wed, 11 Nov 2009 16:07:55 GMT"/>
+			</widget>
+			<packing>
+			  <property name="left_attach">4</property>
+			  <property name="right_attach">5</property>
+			  <property name="top_attach">3</property>
+			  <property name="bottom_attach">4</property>
+			  <property name="x_options">fill</property>
+			  <property name="y_options"></property>
+			</packing>
+		      </child>
+
+		      <child>
+			<widget class="GtkButton" id="attrApplyAllBtn">
+			  <property name="visible">True</property>
+			  <property name="can_focus">True</property>
+			  <property name="label" translatable="yes">Apply All</property>
+			  <property name="use_underline">True</property>
+			  <property name="relief">GTK_RELIEF_NORMAL</property>
+			  <property name="focus_on_click">True</property>
+			  <signal name="clicked" handler="on_attrApplyBtn_clicked" last_modification_time="Mon, 09 Nov 2009 23:05:37 GMT"/>
 			</widget>
 			<packing>
 			  <property name="left_attach">4</property>
