--- a/cmd/gvedit/ui/settings.ui
+++ b/cmd/gvedit/ui/settings.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>405</width>
+    <width>403</width>
     <height>512</height>
    </rect>
   </property>
@@ -19,7 +19,7 @@
      <x>0</x>
      <y>0</y>
      <width>401</width>
-     <height>181</height>
+     <height>151</height>
     </rect>
    </property>
    <property name="frameShape">
@@ -37,7 +37,7 @@
       <x>10</x>
       <y>10</y>
       <width>381</width>
-      <height>161</height>
+      <height>131</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_5">
@@ -244,66 +244,6 @@
          </item>
         </layout>
        </item>
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_4"/>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_11">
-       <item>
-        <spacer name="horizontalSpacer_4">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item>
-        <widget class="QCheckBox" name="chbPreview">
-         <property name="text">
-          <string>Preview Output File</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <spacer name="horizontalSpacer_6">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item>
-        <widget class="QCheckBox" name="chbCairo">
-         <property name="text">
-          <string>Apply Cairo Filters</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <spacer name="horizontalSpacer_5">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
       </layout>
      </item>
     </layout>
@@ -313,9 +253,9 @@
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>180</y>
+     <y>150</y>
      <width>401</width>
-     <height>71</height>
+     <height>61</height>
     </rect>
    </property>
    <property name="frameShape">
@@ -324,20 +264,20 @@
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
    </property>
-   <widget class="QWidget" name="layoutWidget">
+   <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>2</x>
       <y>0</y>
-      <width>381</width>
-      <height>62</height>
+      <width>391</width>
+      <height>61</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout_7">
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="1,2,1,2">
+        <layout class="QHBoxLayout" name="horizontalLayout_5">
          <item>
           <widget class="QLabel" name="label_5">
            <property name="text">
@@ -372,33 +312,13 @@
           </widget>
          </item>
          <item>
-          <widget class="QComboBox" name="cbName">
-           <item>
-            <property name="text">
-             <string>color</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Font</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>fontname</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>fontcolor</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>bgcolor</string>
-            </property>
-           </item>
-          </widget>
+          <widget class="QComboBox" name="cbNameG"/>
+         </item>
+         <item>
+          <widget class="QComboBox" name="cbNameN"/>
+         </item>
+         <item>
+          <widget class="QComboBox" name="cbNameE"/>
          </item>
         </layout>
        </item>
@@ -480,9 +400,9 @@
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>250</y>
+     <y>210</y>
      <width>401</width>
-     <height>261</height>
+     <height>301</height>
     </rect>
    </property>
    <property name="frameShape">
@@ -497,7 +417,7 @@
       <x>7</x>
       <y>6</y>
       <width>391</width>
-      <height>251</height>
+      <height>291</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_4">
